Section "About us"
Inserindo o javascript para o funcionamento dos pointer ao clicar. Construção da primeira seção do site e de alguns itens default.

--- a/index.html
+++ b/index.html
@@ -41,29 +41,71 @@
             <div class="sliders">
                 <div class="slide">
                     <div class="slidearea">
-                        <h1>Design is about<br><span>Communication</span></h1>
+                        <h1>Design is about</h1>
+                        <h1 class="coloredText">Communication</h1>
                         <h2>Call Us: +00 0 1234 5678</h2>
-                        <a href="">Get in touch!</a>
+                        <a href="" class="button">Get in touch!</a>
                     </div>
                 </div>
                 <div class="slide">
-                    ...2
+                    <div class="slidearea">
+                        <h1>Design is about</h1>
+                        <h1 class="coloredText">Services</h1>
+                        <h2>Call Us: +00 0 1234 5678</h2>
+                        <a href="" class="button">Get in touch!</a>
+                    </div>
                 </div>
                 <div class="slide">
-                    ...3
+                    <div class="slidearea">
+                        <h1>Design is about</h1>
+                        <h1 class="coloredText">Happy clients</h1>
+                        <h2>Call Us: +00 0 1234 5678</h2>
+                        <a href="" class="button">Get in touch!</a>
+                    </div>
                 </div>
             </div>
             <div class="sliders_pointers">
-                <div class="pointer active"></div>
-                <div class="pointer"></div>
-                <div class="pointer"></div>
+                <div class="pointer active" onclick="selectedSlide(1)"></div>
+                <div class="pointer" onclick="selectedSlide(2)"></div>
+                <div class="pointer" onclick="selectedSlide(3)"></div>
             </div>
         </section>
+
+        <section class="default light">
+            <div class="section_title">about us</div>
+            <div class="section_description">who we are?</div>
+            <div class="section_body">
+                <div class="section_aboutus">
+                    <div class="section_aboutus_left">
+                        <p> 
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit modi quas, atque iure totam esse incidunt, culpa, nisi sapiente minima aperiam earum enim dolor at? Totam tempore praesentium dicta error! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus dolorum error accusantium.
+                        </p>
+                        <br>
+                        <a href="" class="button">Learn More</a>
+                    </div>
+                    <div class="section_aboutus_right">
+                        <div class="section_aboutus_right_video">
+                            <p>Watch Video!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="default dark">
+            <div class="section_title">Título Exemplo</div>
+            <div class="section_description">Uma descrição qualquer</div>
+            <div class="section_body">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum esse totam minus accusantium inventore.
+            </div>
+        </section>
+
     </main>
 
     <footer>
 
     </footer>
 
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
