--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,8 +12,9 @@
 
     <title>Awax</title>
 </head>
+
 <body>
-    
+
     <header>
         <div class="header">
             <div class="logo">
@@ -77,8 +79,11 @@
             <div class="section_body">
                 <div class="section_aboutus">
                     <div class="section_aboutus_left">
-                        <p> 
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit modi quas, atque iure totam esse incidunt, culpa, nisi sapiente minima aperiam earum enim dolor at? Totam tempore praesentium dicta error! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus dolorum error accusantium.
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit modi quas, atque iure totam
+                            esse incidunt, culpa, nisi sapiente minima aperiam earum enim dolor at? Totam tempore
+                            praesentium dicta error! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus
+                            dolorum error accusantium.
                         </p>
                         <br>
                         <a href="" class="button">Learn More</a>
@@ -93,10 +98,164 @@
         </section>
 
         <section class="default dark">
-            <div class="section_title">Título Exemplo</div>
-            <div class="section_description">Uma descrição qualquer</div>
+            <div class="section_title">Services</div>
+            <div class="section_description">Services that we provide</div>
             <div class="section_body">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum esse totam minus accusantium inventore.
+                <div class="section_services">
+                    <div class="section_service">
+                        <img src="assets/images/medalha.png">
+                        <h4>High quality design</h4>
+                        <p>Culpa facere aliquid</p>
+                    </div>
+                    <div class="section_service">
+                        <img src="assets/images/estrela.png">
+                        <h4>Modern design</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+                    </div>
+                    <div class="section_service">
+                        <img src="assets/images/relogio.png">
+                        <h4>regular updates</h4>
+                        <p>Optio sunt quam voluptas eos deleniti</p>
+                    </div>
+                    <div class="section_service">
+                        <img src="assets/images/balao.png">
+                        <h4>fast and free suport</h4>
+                        <p>Iusto deserunt ex consectetur porro inventore expedita</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="default light">
+            <div class="section_title">our projects</div>
+            <div class="section_description">what we create</div>
+            <div class="section_body">
+                <div class="section_projects">
+                    <div class="section_projects_filters">
+                        <ul>
+                            <li><a href="">All</a></li>
+                            <li><a href="">Photos</a></li>
+                            <li><a href="">Branding</a></li>
+                            <li><a href="">Adverts</a></li>
+                            <li><a href="">Development</a></li>
+                            <li><a href="">Misc</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="section_projects_photos">
+                        <div class="section_project_photo">
+                            <div class="section_projects_photoarea">
+                                <div class="section_projects_photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <p>Aliquam ipsum fugit quaerat</p>
+                                </div>
+                                <img src="media/foto1.jpg" />
+                            </div>
+                        </div>
+                        <div class="section_project_photo">
+                            <div class="section_projects_photoarea">
+                                <div class="section_projects_photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <p>Aliquam ipsum fugit quaerat</p>
+                                </div>
+                                <img src="media/foto2.jpg" />
+                            </div>
+                        </div>
+                        <div class="section_project_photo">
+                            <div class="section_projects_photoarea">
+                                <div class="section_projects_photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <p>Aliquam ipsum fugit quaerat</p>
+                                </div>
+                                <img src="media/foto3.jpg" />
+                            </div>
+                        </div>
+                        <div class="section_project_photo">
+                            <div class="section_projects_photoarea">
+                                <div class="section_projects_photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <p>Aliquam ipsum fugit quaerat</p>
+                                </div>
+                                <img src="media/foto4.jpg" />
+                            </div>
+                        </div>
+                        <div class="section_project_photo">
+                            <div class="section_projects_photoarea">
+                                <div class="section_projects_photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <p>Aliquam ipsum fugit quaerat</p>
+                                </div>
+                                <img src="media/foto5.jpg" />
+                            </div>
+                        </div>
+                        <div class="section_project_photo">
+                            <div class="section_projects_photoarea">
+                                <div class="section_projects_photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <p>Aliquam ipsum fugit quaerat</p>
+                                </div>
+                                <img src="media/foto6.jpg" />
+                            </div>
+                        </div>
+                        <div class="section_project_photo">
+                            <div class="section_projects_photoarea">
+                                <div class="section_projects_photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <p>Aliquam ipsum fugit quaerat</p>
+                                </div>
+                                <img src="media/foto7.jpg" />
+                            </div>
+                        </div>
+                        <div class="section_project_photo">
+                            <div class="section_projects_photoarea">
+                                <div class="section_projects_photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <p>Aliquam ipsum fugit quaerat</p>
+                                </div>
+                                <img src="media/foto9.jpg" />
+                            </div>
+                        </div>
+                        <div class="section_project_photo">
+                            <div class="section_projects_photoarea">
+                                <div class="section_projects_photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <p>Aliquam ipsum fugit quaerat</p>
+                                </div>
+                                <img src="media/foto4.jpg" />
+                            </div>
+                        </div>
+                        <div class="section_project_photo">
+                            <div class="section_projects_photoarea">
+                                <div class="section_projects_photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <p>Aliquam ipsum fugit quaerat</p>
+                                </div>
+                                <img src="media/foto3.jpg" />
+                            </div>
+                        </div>
+                        <div class="section_project_photo">
+                            <div class="section_projects_photoarea">
+                                <div class="section_projects_photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <p>Aliquam ipsum fugit quaerat</p>
+                                </div>
+                                <img src="media/foto2.jpg" />
+                            </div>
+                        </div>
+                        <div class="section_project_photo">
+                            <div class="section_projects_photoarea">
+                                <div class="section_projects_photoinfo">
+                                    <h5>ABOUT</h5>
+                                    <p>Aliquam ipsum fugit quaerat</p>
+                                </div>
+                                <img src="media/foto1.jpg" />
+                            </div>
+                        </div>
+                    </div>
+
+                    <a href="" class="button">More Projects</a>
+
+                </div>
             </div>
         </section>
 
@@ -108,4 +267,5 @@
 
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
