--- a/index.html
+++ b/index.html
@@ -259,6 +259,211 @@
             </div>
         </section>
 
+        <section class="default dark bg-team">
+            <div class="section_team_area">
+                <div class="section_title">Our Team</div>
+                <div class="section_description">our co-workers</div>
+                <div class="section_body">
+                    <div class="section_team">
+                        <div class="sliders">
+                            <div class="slide_team">
+                                <div class="slidearea">
+                                    <img class="section_team_avatar" src="media/mulher1.png">
+                                    <div class="section_team_name">Jane Doe</div>
+                                    <div class="section_team_role">Master mind</div>
+                                    <div class="section_team_social">
+                                        <a href=""><img src="assets/images/facebook.png"></a>
+                                        <a href=""><img src="assets/images/googleplus.png"></a>
+                                        <a href=""><img src="assets/images/linkedin.png"></a>
+                                        <a href=""><img src="assets/images/pinterest.png"></a>
+                                        <a href=""><img src="assets/images/twitter.png"></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slide_team">
+                                <div class="slidearea">
+                                    <img class="section_team_avatar" src="media/homem1.png">
+                                    <div class="section_team_name">Mike Chiller</div>
+                                    <div class="section_team_role">Creative head</div>
+                                    <div class="section_team_social">
+                                        <a href=""><img src="assets/images/facebook.png"></a>
+                                        <a href=""><img src="assets/images/googleplus.png"></a>
+                                        <a href=""><img src="assets/images/linkedin.png"></a>
+                                        <a href=""><img src="assets/images/pinterest.png"></a>
+                                        <a href=""><img src="assets/images/twitter.png"></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slide_team">
+                                <div class="slidearea">
+                                    <img class="section_team_avatar" src="media/mulher2.png">
+                                    <div class="section_team_name">Anna Johns</div>
+                                    <div class="section_team_role">Technical lead</div>
+                                    <div class="section_team_social">
+                                        <a href=""><img src="assets/images/facebook.png"></a>
+                                        <a href=""><img src="assets/images/googleplus.png"></a>
+                                        <a href=""><img src="assets/images/linkedin.png"></a>
+                                        <a href=""><img src="assets/images/pinterest.png"></a>
+                                        <a href=""><img src="assets/images/twitter.png"></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="sliders_pointers">
+                        <div class="pointer active"></div>
+                        <div class="pointer"></div>
+                        <div class="pointer"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="default light">
+            <div class="section_clients_area">
+                <div class="section_title">happy clients</div>
+                <div class="section_description">client reviews</div>
+                <div class="section_body">
+                    <div class="section_clients">
+                        <div class="sliders">
+                            <div class="slide_clients">
+                                <div class="slidearea">
+                                    <img class="section_clients_avatar" src="media/homem2.png">
+                                    <div class="section_clients_name">John Doe</div>
+                                    <div class="section_clients_role">Head of PR Department</div>
+                                    <img src="assets/images/quote.png">
+                                    <div class="section_clients_quote">
+                                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo iure minus cumque quaerat, voluptas autem distinctio tenetur praesentium eum ducimus inventore accusantium ex, eos similique corporis. Praesentium asperiores sint aspernatur.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slide_clients">
+                                <div class="slidearea">
+                                    <img class="section_clients_avatar" src="media/mulher2.png">
+                                    <div class="section_clients_name">Anna Johns</div>
+                                    <div class="section_clients_role">Technical lead</div>
+                                    <img src="assets/images/quote.png">
+                                    <div class="section_clients_quote">
+                                        Corporis quas, veritatis ut impedit doloremque officiis nulla aperiam commodi ullam.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slide_clients">
+                                <div class="slidearea">
+                                    <img class="section_clients_avatar" src="media/mulher1.png">
+                                    <div class="section_clients_name">Anna Johns</div>
+                                    <div class="section_clients_role">Technical lead</div>
+                                    <img src="assets/images/quote.png">
+                                    <div class="section_clients_quote">
+                                        Veritatis aperiam tempora itaque autem quod recusandae nisi tempore! Tempore dolores quo ab libero nam quam in.
+                                </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="sliders_pointers">
+                        <div class="pointer active"></div>
+                        <div class="pointer"></div>
+                        <div class="pointer"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="prizes">
+            <div class="prizes_area">
+            <img src="media/empresa1.png">
+            <img src="media/empresa2.png">
+            <img src="media/empresa3.png">
+            <img src="media/empresa4.png">
+            <img src="media/empresa5.png">
+            <img src="media/empresa6.png">
+        </div>
+        </section>
+
+        <section class="default light_darker">
+            <div class="section_prices_area">
+                <div class="section_title">price</div>
+                <div class="section_description">pricing table</div>
+                <div class="section_body">
+                    <div class="section_prices">
+                        <div class="section_price">
+                            <h3>Express</h3>
+                            <h1>$ 9.99</h1>
+                            <h4>/ month</h4>
+                            <p>Tracking issues</p>
+                            <div class="section_price_line"></div>
+                            <p>Add bugs through email</p>
+                            <div class="section_price_line"></div>
+                            <p>Notifications</p>
+                            <div class="section_price_line"></div>
+                            <p>Time tracking</p>
+                            <div class="section_price_line"></div>
+                            <p>Custom views</p>
+                            <a class="button dark" href="">Choose</a>
+                        </div>
+                        <div class="section_price">
+                            <h3>standart</h3>
+                            <h1>$ 14.99</h1>
+                            <h4>/ month</h4>
+                            <p>Tracking issues</p>
+                            <div class="section_price_line"></div>
+                            <p>Add bugs through email</p>
+                            <div class="section_price_line"></div>
+                            <p>Notifications</p>
+                            <div class="section_price_line"></div>
+                            <p>Time tracking</p>
+                            <div class="section_price_line"></div>
+                            <p>Custom views</p>
+                            <a class="button dark" href="">Choose</a>
+                        </div>
+                        <div class="section_price">
+                            <h3>luxe</h3>
+                            <h1>$ 19.99</h1>
+                            <h4>/ month</h4>
+                            <p>Tracking issues</p>
+                            <div class="section_price_line"></div>
+                            <p>Add bugs through email</p>
+                            <div class="section_price_line"></div>
+                            <p>Notifications</p>
+                            <div class="section_price_line"></div>
+                            <p>Time tracking</p>
+                            <div class="section_price_line"></div>
+                            <p>Custom views</p>
+                            <a class="button dark" href="">Choose</a>
+                        </div>
+                        <div class="section_price">
+                            <h3>premium</h3>
+                            <h1>$ 24.99</h1>
+                            <h4>/ month</h4>
+                            <p>Tracking issues</p>
+                            <div class="section_price_line"></div>
+                            <p>Add bugs through email</p>
+                            <div class="section_price_line"></div>
+                            <p>Notifications</p>
+                            <div class="section_price_line"></div>
+                            <p>Time tracking</p>
+                            <div class="section_price_line"></div>
+                            <p>Custom views</p>
+                            <a class="button dark" href="">Choose</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="default light">
+            <div class="section_premium_area">
+                <div class="section_title">premium</div>
+                <div class="section_description">even more features available</div>
+                <div class="section_body">
+                    <div class="section_premium">
+                        
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer>
