--- a/index.html
+++ b/index.html
@@ -272,11 +272,11 @@
                                     <div class="section_team_name">Jane Doe</div>
                                     <div class="section_team_role">Master mind</div>
                                     <div class="section_team_social">
+                                        <a href=""><img src="assets/images/twitter.png"></a>
+                                        <a href=""><img src="assets/images/linkedin.png"></a>
                                         <a href=""><img src="assets/images/facebook.png"></a>
                                         <a href=""><img src="assets/images/googleplus.png"></a>
-                                        <a href=""><img src="assets/images/linkedin.png"></a>
                                         <a href=""><img src="assets/images/pinterest.png"></a>
-                                        <a href=""><img src="assets/images/twitter.png"></a>
                                     </div>
                                 </div>
                             </div>
@@ -286,11 +286,11 @@
                                     <div class="section_team_name">Mike Chiller</div>
                                     <div class="section_team_role">Creative head</div>
                                     <div class="section_team_social">
+                                        <a href=""><img src="assets/images/twitter.png"></a>
+                                        <a href=""><img src="assets/images/linkedin.png"></a>
                                         <a href=""><img src="assets/images/facebook.png"></a>
                                         <a href=""><img src="assets/images/googleplus.png"></a>
-                                        <a href=""><img src="assets/images/linkedin.png"></a>
                                         <a href=""><img src="assets/images/pinterest.png"></a>
-                                        <a href=""><img src="assets/images/twitter.png"></a>
                                     </div>
                                 </div>
                             </div>
@@ -300,11 +300,11 @@
                                     <div class="section_team_name">Anna Johns</div>
                                     <div class="section_team_role">Technical lead</div>
                                     <div class="section_team_social">
+                                        <a href=""><img src="assets/images/twitter.png"></a>
+                                        <a href=""><img src="assets/images/linkedin.png"></a>
                                         <a href=""><img src="assets/images/facebook.png"></a>
                                         <a href=""><img src="assets/images/googleplus.png"></a>
-                                        <a href=""><img src="assets/images/linkedin.png"></a>
                                         <a href=""><img src="assets/images/pinterest.png"></a>
-                                        <a href=""><img src="assets/images/twitter.png"></a>
                                     </div>
                                 </div>
                             </div>
@@ -333,7 +333,9 @@
                                     <div class="section_clients_role">Head of PR Department</div>
                                     <img src="assets/images/quote.png">
                                     <div class="section_clients_quote">
-                                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo iure minus cumque quaerat, voluptas autem distinctio tenetur praesentium eum ducimus inventore accusantium ex, eos similique corporis. Praesentium asperiores sint aspernatur.
+                                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo iure minus cumque
+                                        quaerat, voluptas autem distinctio tenetur praesentium eum ducimus inventore
+                                        accusantium ex, eos similique corporis. Praesentium asperiores sint aspernatur.
                                     </div>
                                 </div>
                             </div>
@@ -344,7 +346,8 @@
                                     <div class="section_clients_role">Technical lead</div>
                                     <img src="assets/images/quote.png">
                                     <div class="section_clients_quote">
-                                        Corporis quas, veritatis ut impedit doloremque officiis nulla aperiam commodi ullam.
+                                        Corporis quas, veritatis ut impedit doloremque officiis nulla aperiam commodi
+                                        ullam.
                                     </div>
                                 </div>
                             </div>
@@ -355,8 +358,9 @@
                                     <div class="section_clients_role">Technical lead</div>
                                     <img src="assets/images/quote.png">
                                     <div class="section_clients_quote">
-                                        Veritatis aperiam tempora itaque autem quod recusandae nisi tempore! Tempore dolores quo ab libero nam quam in.
-                                </div>
+                                        Veritatis aperiam tempora itaque autem quod recusandae nisi tempore! Tempore
+                                        dolores quo ab libero nam quam in.
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -372,13 +376,13 @@
 
         <section class="prizes">
             <div class="prizes_area">
-            <img src="media/empresa1.png">
-            <img src="media/empresa2.png">
-            <img src="media/empresa3.png">
-            <img src="media/empresa4.png">
-            <img src="media/empresa5.png">
-            <img src="media/empresa6.png">
-        </div>
+                <img src="media/empresa1.png">
+                <img src="media/empresa2.png">
+                <img src="media/empresa3.png">
+                <img src="media/empresa4.png">
+                <img src="media/empresa5.png">
+                <img src="media/empresa6.png">
+            </div>
         </section>
 
         <section class="default light_darker">
@@ -458,7 +462,143 @@
                 <div class="section_description">even more features available</div>
                 <div class="section_body">
                     <div class="section_premium">
-                        
+                        <div class="sliders">
+                            <div class="slide_premium">
+                                <img class="slide_premium_image" src="media/livros.png" />
+                                <div class="slide_premium_right">
+                                    <div class="slide_premium_feature">
+                                        <img src="assets/images/check.png" />
+                                        <div class="slide_premium_content">
+                                            <h1>first feature</h1>
+                                            <p>Lorem ipsum dolor sit amet consectetur.</p>
+                                            <p>Qusto voluptate provident cum dolorum.</p>
+                                            <p>- FEATURE ONE</p>
+                                            <p>- FEATURE TWO</p>
+                                            <p>- FEATURE THREE</p>
+                                        </div>
+                                    </div>
+                                    <div class="slide_premium_feature">
+                                        <img src="assets/images/check.png" />
+                                        <div class="slide_premium_content">
+                                            <h1>second feature</h1>
+                                            <p>Lorem ipsum dolor sit amet consectetur.</p>
+                                        </div>
+                                    </div>
+                                    <div class="slide_premium_feature">
+                                        <img src="assets/images/check.png" />
+                                        <div class="slide_premium_content">
+                                            <h1>third feature</h1>
+                                            <p>Qusto voluptate provident cum dolorum.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="sliders_pointers">
+                    <div class="pointer active"></div>
+                    <div class="pointer"></div>
+                    <div class="pointer"></div>
+                </div>
+                <a class="button" href="">get in touch</a>
+            </div>
+            </div>
+        </section>
+
+        <section class="default dark">
+            <div class="section_title">Some facts</div>
+            <div class="section_description">about our work</div>
+            <div class="section_body">
+                <div class="section_facts">
+                    <div class="section_fact">
+                        <div class="section_fact_area">
+                            <div class="section_fact_number">1000</div>
+                            <div class="section_fact_line"></div>
+                            <div class="section_fact_work">design projects released</div>
+                        </div>
+                        <div class="section_fact_info">
+                            Praesent metus urna, feugiat a placerat elementum at leo
+                        </div>
+                    </div>
+                    <div class="section_fact">
+                        <div class="section_fact_area">
+                            <div class="section_fact_number">900</div>
+                            <div class="section_fact_line"></div>
+                            <div class="section_fact_work">photos</div>
+                        </div>
+                        <div class="section_fact_info">
+                            Praesent metus urna, feugiat a placerat elementum at leo
+                        </div>
+                    </div>
+                    <div class="section_fact">
+                        <div class="section_fact_area">
+                            <div class="section_fact_number">500</div>
+                            <div class="section_fact_line"></div>
+                            <div class="section_fact_work">marketing ideas</div>
+                        </div>
+                        <div class="section_fact_info">
+                            Praesent metus urna, feugiat a placerat elementum at leo
+                        </div>
+                    </div>
+                    <div class="section_fact">
+                        <div class="section_fact_area">
+                            <div class="section_fact_number">100</div>
+                            <div class="section_fact_line"></div>
+                            <div class="section_fact_work">exhibitions</div>
+                        </div>
+                        <div class="section_fact_info">
+                            Praesent metus urna, feugiat a placerat elementum at leo
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="social">
+            <div class="social_area">
+                <div class="social_share">
+                    <a href=""><img src="assets/images/share.png"></a>
+                    <p>tell about us:</p>
+                </div>
+                <div class="social_info">
+                    <a class="social_twitter" href=""><img src="assets/images/twitter.png"></a>
+                    <p>152</p>
+                </div>
+                <div class="social_info">
+                    <a class="social_linkedin" href=""><img src="assets/images/linkedin.png"></a>
+                    <p>31</p>
+                </div>
+                <div class="social_info">
+                    <a class="social_facebook" href=""><img src="assets/images/facebook.png"></a>
+                    <p>165</p>
+                </div>
+                <div class="social_info">
+                    <a class="social_googleplus" href=""><img src="assets/images/googleplus.png"></a>
+                    <p>22</p>
+                </div>
+                <div class="social_info">
+                    <a class="social_pinterest" href=""><img src="assets/images/pinterest.png"></a>
+                    <p>165</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="default light">
+            <div class="section_message_area">
+                <div class="section_title">contact us</div>
+                <div class="section_description">our agency located in Melbourne, Australia</div>
+                <div class="section_body">
+                    <div class="section_message">
+                        <div class="sender">
+                            <input type="text" name="name" id="" placeholder="Name">
+                            <input type="email" name="email" id="" placeholder="email">
+                        </div>
+                        <input type="text" name="subject" id="" placeholder="subject">
+                        <textarea class="message" name="message" placeholder="message"></textarea>
+
+                        <a class="button" href="">Send Message</a>
                     </div>
                 </div>
             </div>
